# sendword

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile  package-lock.json  package.json  sendword.toml  tailwind.config.js
.beads/: interactions.jsonl  metadata.json
.github/workflows/: website.yml
docs/superpowers/plans/: 2026-04-12-m4-trigger-rules.md  2026-04-12-m5-execution-barriers.md  2026-04-12-m6-executors-backup-polish.md  2026-04-29-wavefunk-design-system-migration.md  2026-04-29-website-wavefunk-design-migration.md
docs/superpowers/specs/: 2026-04-07-sendword-v1-design.md  2026-04-07-user-login-config-editing-design.md  2026-04-12-m4-trigger-rules-design.md  2026-04-12-m5-execution-barriers-design.md  2026-04-12-m6-executors-backup-polish-design.md  2026-04-29-wavefunk-design-migration-website.md  2026-04-29-wavefunk-design-system-migration.md
migrations/: 20260407000001_create_executions.sql  20260407000002_create_users.sql  20260407000003_create_sessions.sql  20260407000004_create_trigger_attempts.sql  20260412000001_create_rate_limit_counters.sql  20260412000005_create_execution_barriers.sql
src/: auth.rs  config.rs  config_writer.rs  db.rs  email.rs  error.rs  executor.rs  extractors.rs  id.rs  interpolation.rs  lib.rs  main.rs  masking.rs  notification.rs  payload.rs  retry.rs  server.rs  tasks.rs  templates.rs  timestamp.rs  webhook_auth.rs
src/backup/: mod.rs  s3.rs  scheduler.rs  tarball.rs
src/barriers/: approval.rs  concurrency.rs  execution_lock.rs  execution_queue.rs  mod.rs
src/executor/: http.rs  mod.rs  script.rs  shell.rs
src/models/: execution.rs  mod.rs  session.rs  trigger_attempt.rs  user.rs
src/routes/: api.rs  auth.rs  dashboard.rs  executions.rs  health.rs  hooks.rs  mod.rs  scripts.rs  settings.rs
src/trigger_rules/: cooldown.rs  mod.rs  payload_filter.rs  rate_limit.rs  time_window.rs
static/css/: 04-components.css  06-marketing.css
static/css/src/: app.css
static/js/: echo.js  sendword.js
static/ts/: main.ts  tsconfig.json
templates/: 404.html  approvals.html  base.html  base_auth.html  dashboard.html  execution_detail.html  hook_detail.html  hook_form.html  login.html  password.html  script_editor.html  scripts.html  users.html
templates/partials/: execution_list.html  trigger_attempt_list.html
tests/: server_integration.rs
website/: site.toml
website/.eigen_cache/: build_manifest.json
website/_data/: categories.yaml  docs.yaml  features.yaml  nav.yaml
website/static/css/: sendword.css  style.css
website/static/css/wavefunk/: 02-base.css  03-layout.css  04-components.css  06-marketing.css  wavefunk.css
website/templates/: 404.html  _base.html  _docs.html  _marketing.html  index.html
website/templates/_partials/: docs-toc.html  footer.html  nav.html  sidebar.html
website/templates/docs/: [doc].html  index.html
