[package]
name = "sendword"
version = "0.0.1"
authors = ["nambiar"]
description = "Simple HTTP webhook to command runner sidecar. Frontend for managing hooks, JSON state for config portability, SQLite for execution history and logs."
edition = "2024"

[[bin]]
name = "sendword"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log-always"] }
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
figment = { version = "0.10", features = ["toml", "json", "env"] }
humantime-serde = "1"
axum = { version = "0.8", features = ["ws", "multipart"] }
base64 = "0.22"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
minijinja = { version = "2", features = ["loader", "json"] }
minijinja-autoreload = "2"
minijinja-contrib = "2"
minijinja-embed = "2"
sqlx = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "sqlite", "derive", "macros", "migrate", "uuid", "chrono", "sqlx-toml"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
argon2 = "0.5"
rand = "0.9"
rand_core = { version = "0.6", features = ["getrandom"] }

[build-dependencies]
minijinja-embed = "2"

[dev-dependencies]
figment = { version = "0.10", features = ["test"] }
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3.8"

[profile.dev]
incremental = true

[profile.dev.package.sqlx-macros]
opt-level = 3
