[package]
name = "sendword"
version = "0.0.1"
authors = ["nambiar"]
description = "Simple HTTP webhook to command runner sidecar. Frontend for managing hooks, JSON state for config portability, SQLite for execution history and logs."
edition = "2024"

[[bin]]
name = "sendword"
path = "src/main.rs"

[dependencies]
allowthem-core   = { path = "../allowthem/crates/core" }
allowthem-server = { path = "../allowthem/crates/server" }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log-always"] }
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
figment = { version = "0.10", features = ["toml", "json", "env"] }
humantime-serde = "1"
axum = { version = "0.8", features = ["ws", "multipart"] }
base64 = "0.22"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
minijinja = { version = "2", features = ["loader", "json"] }
minijinja-autoreload = "2"
minijinja-contrib = "2"
minijinja-embed = "2"
sqlx = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "sqlite", "derive", "macros", "migrate", "uuid", "chrono", "sqlx-toml"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
argon2 = "0.5"
rand = "0.9"
rand_core = { version = "0.6", features = ["getrandom"] }
toml_edit = { version = "0.22", features = ["serde"] }
arc-swap = "1"
clap = { version = "4", features = ["derive"] }
ring = "0.17"
rpassword = "7"
urlencoding = "2.1.3"
humantime = "2.3.0"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-native-tls"] }
flate2 = "1"
tar = "0.4"
cron = "0.12"
tempfile = "3.8"
async-stream = "0.3"
futures-core = "0.3"

[build-dependencies]
minijinja-embed = "2"

[dev-dependencies]
figment = { version = "0.10", features = ["test"] }
reqwest = { version = "0.12", features = ["json"] }

[profile.dev]
incremental = true

[profile.dev.package.sqlx-macros]
opt-level = 3
